--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:theme="@style/AppTheme" >
                 <meta-data android:name="com.facebook.sdk.ApplicationId"
                 android:value="@string/app_id" />
-                <meta-data android:name="com.google.gms.version"
-                    android:value="google_play_services_version"/>
+                <meta-data android:name="com.google.android.gms.version"
+                    android:value="@integer/google_play_services_version"/>
         <activity
             android:name=".Activity_main"
             android:label="@string/app_name" >
